test/spec_vectors/block/fail/module_23.wat
(module (func $type-value-empty-vs-i64 (result i64) (block (result i64))))